--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-router": "0.0.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {},
   "description": ""
